--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,124 @@
 body {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    background-color: #fafafa;
+    color: #333;
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #333;
+  padding: 0.5em;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5em;
+}
+
+nav a:hover {
+}
+header {
+  text-align: center;
+  padding: 1.5em 1em;
+  background: #f4f4f4;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 1.8rem;
+}
+
+main {
+  padding: 1em;
+}
+
+section {
+  text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.headshot {
+  width: 120px;
+  height: auto;
+  border-radius: 50%;
+  margin-bottom: 1em;
+}
+
+h2 {
+  margin-top: 0.5em;
+  font-size: 1.4rem;
+}
+
+p {
+  margin: 0.8em 0;
+  font-size: 1rem;
+}
+
+footer {
+  text-align: center;
+  padding: 1em;
+  background: #333;
+  color: #fff;
+  font-size: 0.9
+}
+
+
+@media (min-width: 600px) {
+  nav {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  nav a {
+    margin: 0 1em;
+  }
+
+  header h1 {
+    font-size: 2.2rem;
+  }
+
+  .headshot {
+    width: 150px;
+  }
+
+  p {
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 992px) {
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 2em;
+  }
+
+  section {
+    text-align: left;
+    max-width: 800px;
+  }
+
+  .headshot {
+    float: left;
+    margin-right: 1.5em;
+    margin-bottom: 1em;
+  }
+
+  h2 {
+    font-size: 1.6rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+  }
 }
