--- a/css/styles.css
+++ b/css/styles.css
@@ -10,108 +10,111 @@ body {
 }
 
 nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #333;
-  padding: 0.5em;
+    align-items: center;
+    background: #333;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5em;
 }
 
 nav a {
-  color: #fff;
-  text-decoration: none;
-  padding: 0.5em;
+    color: #ffffff;
+    padding: 0.5em;
+    text-decoration: none;
 }
 
 nav a:hover {
+    color: #ffffff;
 }
+
 header {
-  text-align: center;
-  padding: 1.5em 1em;
-  background: #f4f4f4;
+    background: #f4f4f4;
+    padding: 1.5em 1em;
+    text-align: left;
 }
 
-header h1 {
-  margin: 0;
-  font-size: 1.8rem;
-}
-
-main {
-  padding: 1em;
-}
-
-section {
-  text-align: center;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.headshot {
-  width: 120px;
-  height: auto;
-  border-radius: 50%;
-  margin-bottom: 1em;
+h1 {
+    margin: 0;
+    font-size: 1.8rem;
 }
 
 h2 {
-  margin-top: 0.5em;
-  font-size: 1.4rem;
+    margin-top: 0.5em;
+    font-size: 1.4rem;
+}
+
+main {
+    padding: 1em;
+}
+
+section {
+    text-align: center;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.headshot {
+    width: 120px;
+    height: auto;
+    border-radius: 50%;
+    margin-bottom: 1em;
 }
 
 p {
-  margin: 0.8em 0;
-  font-size: 1rem;
+    margin: 0.8em 0;
+    font-size: 1rem;
 }
 
 footer {
-  text-align: center;
-  padding: 1em;
-  background: #333;
-  color: #fff;
-  font-size: 0.9
+    text-align: center;
+    padding: 1em;
+    background: #333;
+    color: #fff;
+    font-size: 0.9
 }
 
 
 @media (min-width: 600px) {
   nav {
-    flex-direction: row;
-    justify-content: center;
+        flex-direction: row;
+        justify-content: center;
   }
 
   nav a {
-    margin: 0 1em;
+        margin: 0 1em;
   }
 
-  header h1 {
-    font-size: 2.2rem;
+  h1 {
+        font-size: 2.2rem;
   }
 
   .headshot {
-    width: 150px;
+        width: 150px;
   }
 
   p {
-    font-size: 1.1rem;
+        font-size: 1.1rem;
   }
 }
 
 @media (min-width: 992px) {
+
   main {
+    align-items: flex-start;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
     padding: 2em;
   }
 
   section {
-    text-align: left;
     max-width: 800px;
+    text-align: left;
   }
 
   .headshot {
     float: left;
-    margin-right: 1.5em;
     margin-bottom: 1em;
+    margin-right: 1.5em;
   }
 
   h2 {
