--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Shay Hart; December 9th, 2025; Final Resume Project */
+
 body {
     background-color: #fafafa;
     color: #333;
@@ -10,7 +12,7 @@ body {
 }
 
 nav {
-    align-items: center;
+    align-items: left;
     background: #333;
     display: flex;
     flex-direction: column;
@@ -48,31 +50,30 @@ main {
 }
 
 section {
-    text-align: center;
-    max-width: 600px;
     margin: 0 auto;
+    max-width: 600px;
+    text-align: left;
 }
 
 .headshot {
-    width: 120px;
-    height: auto;
     border-radius: 50%;
+    height: auto;
     margin-bottom: 1em;
+    width: 120px;
 }
 
 p {
-    margin: 0.8em 0;
     font-size: 1rem;
+    margin: 0.8em 0;
 }
 
 footer {
-    text-align: center;
-    padding: 1em;
     background: #333;
     color: #fff;
-    font-size: 0.9
+    font-size: 0.9;
+    padding: 1em;
+    text-align: left;
 }
-
 
 @media (min-width: 600px) {
   nav {
