--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,12 @@
 body {
     background-color: #fafafa;
     color: #333;
+    display: flex;
+    flex-direction: column;
     font-family: "Open Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
+    height: 100%;
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -46,6 +49,7 @@ h2 {
 }
 
 main {
+    flex: 1;
     padding: 1em;
 }
 
@@ -71,6 +75,7 @@ footer {
     background: #333;
     color: #fff;
     font-size: 0.9;
+    margin-top: auto;
     padding: 1em;
     text-align: right;
 }
