--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #fafafa;
-    color: #333;
+    color: #333333;
     display: flex;
     flex-direction: column;
     font-family: "Open Sans", sans-serif;
@@ -16,7 +16,7 @@ body {
 
 nav {
     align-items: center;
-    background: #333;
+    background: #333333;
     display: flex;
     flex-direction: column;
     padding: 0.5em;
@@ -33,7 +33,7 @@ nav a:hover {
 }
 
 header {
-    background: #f4f4f4;
+    background: #b89654;
     padding: 1.5em 1em;
     text-align: left;
 }
@@ -97,8 +97,8 @@ p {
   
 
 footer {
-    background: #333;
-    color: #fff;
+    background: #333333;
+    color: #ffffff;
     font-size: 0.9;
     margin-top: auto;
     padding: 1em;
