--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,11 @@ section {
     text-align: left;
 }
 
+section a {
+    color: #000000;
+    text-decoration: none;
+}
+
 .headshot {
     border-radius: 50%;
     height: auto;
