--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
 
 /* Body Styling */
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #fafafa;
     color: #333333;
